fix: wrong alignment when not enough messages

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,16 @@
 .App {
-  /* text-align: center; */
   display: flex;
   flex-direction: column;
-  height: 100%
+  height: 100%;
 }
 
 .chat {
   overflow-y: auto;
   background-color: #F1F8FB;
+  height: calc(100% - 70px);
 }
 
 .messageInput {
   flex-shrink: 0;
+  align-content: flex-end;
 }
