--- a/src/Chat.css
+++ b/src/Chat.css
@@ -1,5 +1,4 @@
 .chatContainer {
-  align-self: flex-end;
 } 
 /* try to move color here */
 
